# property-management-leadgen

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  dead-end-ledger.md  docker-compose.yml  loop-state.json  pyproject.toml  requirements.txt  runner.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: app.js
frontend/src/components/: CaptchaModal.js  Dashboard.js  LeadTable.js  Settings.js
frontend/src/styles/: app.css
src/: __init__.py  ipc_router.py  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: python-sidecar-x86_64-unknown-linux-gnu
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/agents/: __init__.py  discovery.py  entity_unmasking.py  market_intelligence.py  output_synthesis.py
src/captcha/: __init__.py  handler.py
src/compliance/: __init__.py  dnc_checker.py
src/db/: __init__.py  connection.py  migrations.py  schema.py
src/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_compatible.py
src/scrapers/: __init__.py  ca_sos_parser.py  county_assessor.py  rental_listings.py
src/sidecar/: __init__.py  dispatch.py  responses.py  signals.py  watchdog.py
src/utils/: __init__.py  credentials.py  csv_import.py  hubspot_client.py  logging.py  rate_limiter.py
src/utils/hubspot_client/: __init__.py  errors.py
tests/: __init__.py  test_agents.py  test_captcha.py  test_compliance.py  test_county_assessor.py  test_county_assessor_integration.py  test_credentials.py  test_csv_import.py  test_db.py  test_e2e_playwright.py  test_hubspot_client.py  test_ipc_integration.py  test_ipc_router.py  test_llm.py  test_main.py  test_scrapers.py  test_sidecar_package.py
