[project]
name = "property-management-leadgen"
version = "0.1.0"
description = "Agentic lead generation for property management — Python sidecar"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pypdf>=4.0",
    "playwright>=1.40",
    "usaddress>=0.5.10",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
leadgen-sidecar = "src.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213", "D400", "D415",
    "ANN101", "ANN102",
    "S311", "S106",
    "EM101", "EM102",
    "PLR2004", "PLR0913", "PLR0911", "PLR0912", "PLR0915",
    "FBT001", "FBT002", "FBT003",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
