[project]
name = "property-management-leadgen"
version = "0.1.0"
description = "Agentic lead generation for property management — Python sidecar"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pypdf>=4.0",
    "playwright>=1.40",
    "usaddress>=0.5.10",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pyinstaller>=6.21.0",
]

[project.scripts]
leadgen-sidecar = "src.main:main"
build-sidecar = "pyinstaller:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "RUF100", "TRY", "PTH", "PT", "PLC", "PLE", "RET", "SLF"]
ignore = [
    "S101",
    "ANN401",
    "TRY400",
    "TRY401",
    "TRY003",
    "PLC0415",
    "RUF002",
    "FIX002",
    "TD002",
    "TD003",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "N802", "N803", "N806", "N815", "N816", "N817",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "ARG002", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
